<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.habit_create.HabitEditActivity">

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/title_of_habit"
        android:inputType="text|textAutoCorrect" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        app:layout_constraintTop_toBottomOf="@id/editTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/habit_description"
        android:inputType="text|textAutoCorrect" />

    <TextView
        android:id="@+id/textPriority"
        android:text="@string/select_the_priority"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/normal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinnerPriority"
        app:layout_constraintTop_toBottomOf="@+id/textPriority"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/normal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/priority_options" />

    <TextView
        android:id="@+id/textRadio"
        android:text="@string/choose_the_type"
        android:layout_margin="@dimen/normal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinnerPriority"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/radioType"
        app:layout_constraintTop_toBottomOf="@+id/textRadio"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/normal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioPhysical"
            android:text="@string/Physical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radioMental"
            android:text="@string/mental"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RadioGroup>

    <EditText
        android:id="@+id/editQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        app:layout_constraintTop_toBottomOf="@id/editDescription"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/quantity_doing_habit"
        android:inputType="number"/>

    <EditText
        android:id="@+id/editPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        app:layout_constraintTop_toBottomOf="@id/editQuantity"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/execution_frequency"
        android:inputType="text|textAutoCorrect" />

    <TextView
        android:id="@+id/textChooseColor"
        android:text="@string/colorText"
        app:layout_constraintTop_toBottomOf="@id/editPeriod"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/normal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/chooseColorButton"
        android:layout_width="@dimen/color_button_width"
        android:layout_height="@dimen/color_button_width"
        android:layout_margin="@dimen/normal_margin"
        app:layout_constraintTop_toBottomOf="@id/textChooseColor"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/color_button" />

<!--    <EditText-->
<!--        android:id="@+id/editColor"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/colorOfHabit"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/write_color" />-->

    <Button
        android:id="@+id/saveHabit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="100dp"
        android:text="@string/save" />

</androidx.constraintlayout.widget.ConstraintLayout>